--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
-    "socket.io": "^4.4.1"
+    "express": "^4.17.3"
   }
 }
